--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,14 @@
-<h1>Create a Movie list</h1>
-<%= simple_form_for [@list] do |f| %>
-  <%= f.input :name %>
-  <%= f.submit "Submit list", class: "btn btn-primary" %>
-<% end %>
+<div class="container py-5">
+  <div class="row">
+    <div class="col-12 col-md-6 offset-lg-3">
+      <div class="bg-white rounded p-3 shadow">
+
+      <h3>Create a Movie list</h3>
+        <%= simple_form_for @list do |f| %>
+          <%= f.input :name, placeholder: 'Drama' %>
+          <%= f.submit "Add this list", class: "btn btn-primary" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
