--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,15 @@
-<h1>the name of the list</h1>
-<h2>TO DO ? display the movies in the list through bookmarks controller</h2>
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path('cinema_seats.png') %>)">
+  <h1><%= @list.name %></h1>
+</div>
+<div>
+<%= link_to "Add a bookmark", new_list_bookmark_path(@list), class: "btn btn-flat" %>
+</div>
+<div class="container mb-5">
+  <% @list.bookmarks.each do |bookmark| %>
+    <strong><%= bookmark.movie.title%> <%= bookmark.movie.rating %></strong>
+    <p><%= bookmark.movie.overview %></p>
+    <p><%= bookmark.comment %></p>
+    <%= link_to "Delete a bookmark", bookmark_path(bookmark), class: "btn btn-flat", data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+    <%# <on appelle le path bookmark_path(bookmark) car c'est le préfixe de delete (bookmark) + le paramètre provient de la route également (bookmark/:id)> %>
+  <% end %>
+</div>
